feat(API) : added new INSPIRO QUOTES app with using API to generate new quotes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="right">
                 <ion-icon name="cellular"></ion-icon>
                 <ion-icon name="wifi"></ion-icon>
-                <ion-icon name="battery-charging" style="color: orange;"></ion-icon>
+                <ion-icon name="battery-charging-outline"style="color: #FFA500 ;"></ion-icon>
             </div>
         </div>
 
@@ -249,6 +249,14 @@
                                     <ion-icon name="logo-snapchat"></ion-icon>
                                 </button></a>
                                 <label>Snapchat</label>
+                            </div>
+
+                            <div class="icon">
+                                <a href="https://biwashgurung.github.io/InspiroQuotes/" target="_blank">
+                                <button class="heart-circle  ">
+                                    <ion-icon name="heart-circle-outline"></ion-icon>
+                                </button></a>
+                                <label>InspiroQuotes</label>
                             </div>
 
                         </div>
